--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Projeto plataforma</title>
+    <title>Unity WebGL Player | ProjetoPlatformer</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width="100vw" height="100vh"></canvas>
+      <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -19,7 +19,7 @@
       <div id="unity-warning"> </div>
       <div id="unity-footer">
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Projeto Plataforma feito para estudos</div>
+        <div id="unity-build-title">Projeto Plataforma</div>
       </div>
     </div>
     <script>
@@ -51,9 +51,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/BuildTesteOpengl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BuildTesteOpengl.data.br",
-        frameworkUrl: buildUrl + "/BuildTesteOpengl.framework.js.br",
-        codeUrl: buildUrl + "/BuildTesteOpengl.wasm.br",
+        dataUrl: buildUrl + "/BuildTesteOpengl.data",
+        frameworkUrl: buildUrl + "/BuildTesteOpengl.framework.js",
+        codeUrl: buildUrl + "/BuildTesteOpengl.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ProjetoPlatformer",
